<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.wm.cs.cs301.KeisterDurmaz.ui.PlayActivity" >

    <ToggleButton
        android:id="@+id/toggleButtonView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/toggleButtonWalls"
        android:layout_alignBottom="@+id/toggleButtonWalls"
        android:onClick="toggleView"
        android:textOff="@string/toggle_view"
        android:textOn="@string/toggle_view" />

    <ToggleButton
        android:id="@+id/toggleButtonWalls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/toggleButtonSolution"
        android:layout_alignBottom="@+id/toggleButtonSolution"
        android:layout_toRightOf="@+id/toggleButtonView"
        android:onClick="toggleWalls"
        android:textOff="@string/toggle_walls"
        android:textOn="@string/toggle_walls" />

    <ToggleButton
        android:id="@+id/toggleButtonPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/toggleButtonSolution"
        android:layout_alignBottom="@+id/toggleButtonSolution"
        android:layout_alignParentRight="true"
        android:onClick="togglePlayPause"
        android:textOff="@string/toggle_pause"
        android:textOn="@string/toggle_play" />

    <ToggleButton
        android:id="@+id/toggleButtonSolution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/toggleButtonWalls"
        android:onClick="toggleSolution"
        android:text="@string/toggle_solution"
        android:textOff="@string/toggle_solution"
        android:textOn="@string/toggle_solution" />

    <Button
        android:id="@+id/buttonUp"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonDown"
        android:layout_toLeftOf="@+id/buttonRight"
        android:onClick="moveUp"
        android:text="@string/button_up" />

    <Button
        android:id="@+id/buttonDown"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/progressBarEnergy"
        android:layout_toLeftOf="@+id/buttonRight"
        android:onClick="moveDown"
        android:text="@string/button_down" />

    <Button
        android:id="@+id/buttonLeft"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/progressBarEnergy"
        android:layout_toLeftOf="@+id/buttonUp"
        android:onClick="moveLeft"
        android:text="@string/button_left" />

	<Button
	    android:id="@+id/buttonRight"
	    style="?android:attr/buttonStyleSmall"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBaseline="@+id/buttonLeft"
	    android:layout_alignBottom="@+id/buttonLeft"
	    android:layout_alignParentRight="true"
	    android:onClick="moveRight"
	    android:text="@string/button_right" />

	<TextView
	    android:id="@+id/textViewEnergy"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/toggleButtonView"
	    android:layout_alignParentBottom="true"
	    android:layout_marginBottom="60dp"
	    android:text="@string/battery_usage"
	    android:textAppearance="?android:attr/textAppearanceSmall" />

	<ProgressBar
	    android:id="@+id/progressBarEnergy"
	    style="?android:attr/progressBarStyleHorizontal"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/textViewEnergy"
	    android:layout_alignRight="@+id/toggleButtonWalls"
	    android:layout_alignTop="@+id/textViewEnergy"
	    android:layout_marginTop="22dp"
	    android:max="100"
	    android:progress="100" />

	
	<edu.wm.cs.cs301.KeisterDurmaz.falstad.MazePanel
	    android:id="@+id/mazePanel"
	    android:layout_width="300dp"
	    android:layout_height="300dp"
	    android:layout_below="@+id/toggleButtonView"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="17dp" />

</RelativeLayout>