<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.wm.cs.cs301.KeisterDurmaz.ui.FinishActivity" >

    <TextView
        android:id="@+id/final_batteryLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/final_pathLength"
        android:layout_marginBottom="30dp"
        android:text="@string/battery_level"
        android:textAppearance="?android:attr/textAppearanceMedium" android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/Result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:textColor="#40C8F5"
        android:textSize="60sp"
        android:text="@string/result"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/final_pathLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Result"
        android:layout_marginTop="18dp"
        android:text="@string/path_length"
        android:textAppearance="?android:attr/textAppearanceMedium" android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/replay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/final_batteryLevel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:onClick="startAMazeActivity"
        android:text="@string/replay" />

</RelativeLayout>