<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.wm.cs.cs301.KeisterDurmaz.ui.AMazeActivity" >
 
    <TextView
        android:id="@+id/driver_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/driver_spinner"
        android:layout_alignLeft="@+id/driver_spinner"
        android:text="@string/driver_prompt" />
 
    <SeekBar
        android:id="@+id/level_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/driver_prompt"
        android:layout_alignLeft="@+id/level_text"
        android:layout_alignRight="@+id/driver_spinner"
        android:layout_marginBottom="20dp"
        android:max="15"
        android:progress="1" />
 
    <TextView
        android:id="@+id/level_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/level_bar"
        android:layout_alignLeft="@+id/driver_prompt"
        android:layout_marginBottom="14dp"
        android:text="@string/level_default" />

 
    <Spinner
        android:id="@+id/builder_spinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/level_text"
        android:layout_alignLeft="@+id/builder_prompt"
        android:layout_marginBottom="22dp"
        android:entries="@array/maze_builders"
        android:prompt="@string/builder_prompt" />
 
    <TextView
        android:id="@+id/builder_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/builder_spinner"
        android:layout_alignLeft="@+id/level_text"
        android:text="@string/builder_prompt" />

    <Spinner
        android:id="@+id/driver_spinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/next_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:entries="@array/maze_drivers"
        android:prompt="@string/driver_prompt" />

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/game_title"
        android:textColor="#40C8F5"
        android:textSize="80sp" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/driver_prompt"
        android:onClick="startGeneratingActivity"
        android:text="Play" />
 
</RelativeLayout>